<resources>
    <string name="app_name">Ventura</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">ActivityLogin</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_username">Username</string>
    <string name="hint_dateOfBirth">Date of birth</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_repeat_password">Repeat password</string>
    <string name="button_register">Register</string>
    <string name="button_login">Login</string>
    <string name="textView_not_registered">Not registered? Register now!</string>
    <string name="textView_forgot_password">Forgot password?</string>
    <string name="textView_login">Already Registered? Log in now!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_settings">Settings</string>
    <string name="title_sessions">Sessions</string>
    <string name="title_record">Record</string>
    <string name="title_profile">Profile</string>
    <string name="title_camera">Camera</string>
    <string name="help_home">Home screen (this screen)</string>
    <string name="help_sessions">See all your workout sessions</string>
    <string name="help_record">Start recording a workout</string>
    <string name="help_profile">See and edit your profile</string>
    <string name="help_signs">Take a photo of a traffic sign to be recognized</string>
    <string name="start_activity">Start activity</string>
    <string name="back">Back</string>
    <string name="uploadPicture">Upload a picture</string>
    <string name="button_start">Start</string>
    <string name="button_pause">Pause</string>
    <string name="button_stop">Stop</string>
    <string name="button_location">Show location</string>
    <string name="textView_elapsed_time">Elapsed time:</string>
    <string name="title_activity_save_session">SaveSessionActivity</string>
    <string name="editText_session_name">Session name</string>
    <string name="button_save_session">Save</string>
    <string name="button_delete_session">Delete</string>
    <string name="distance">Distance</string>
    <string name="total_distance">Total distance:</string>
    <string name="total_activities">Total activities:</string>
    <string name="duration">Duration</string>
    <string name="pace">Pace</string>
    <string name="elevation">Elevation gain</string>
    <string name="button_take_image">Take image</string>
    <string name="button_save_image">Save image</string>
    <string name="logout">Log out</string>
    <string name="placefinger">Place finger on your camera</string>
    <string name="yourpulse">Your pulse:</string>
    <string name="save">Save</string>
    <string name="monitorHearbeat">Monitor heartbeat</string>
    <string name="heartbeatwillappear">Your average heartbeat per minute will appear here</string>
    <string name="your_heartbeats">Your heartbeats</string>
    <string name="activity_type">Activity type:</string>
    <string name="pace_">Pace:</string>
</resources>