<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_sessions"
        android:icon="@drawable/icon_training"
        android:title="@string/title_sessions" />

    <item
        android:id="@+id/navigation_record"
        android:icon="@drawable/record_icon"
        android:title="@string/title_record" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile_icon1"
        android:title="@string/title_profile" />
    <item
        android:id="@+id/navigation_camera"
        android:icon="@drawable/camera_icon"
        android:title="@string/title_camera" />
</menu>