<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.ventura.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_sessions"
        android:name="com.example.ventura.ui.sessions.SessionsFragment"
        android:label="@string/title_sessions"
        tools:layout="@layout/sessions_fragment" />

    <fragment
        android:id="@+id/navigation_record"
        android:name="com.example.ventura.ui.record.RecordFragment"
        android:label="@string/title_record"
        tools:layout="@layout/record_fragment" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.ventura.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/profile_fragment" />
    <fragment
        android:id="@+id/navigation_camera"
        android:name="com.example.ventura.ui.camera.CameraFragment"
        android:label="fragment_camera"
        tools:layout="@layout/fragment_camera" />
</navigation>